tests/typing/pass/array/cross_contract2.act
contract A

constructor()

creates

  uint[3] ar := [1,2,3]



contract B

constructor(address<A> a)

creates

  A x := a

ensures x.ar[2] * 0 == 0
